# modandsim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  add.c  add.cpp  assignment1  assignment1c  cmake_install.cmake  main.cpp  opgave2.py  opgave3.py  opgave4.py  part3.py  pyc
week1/: CMakeLists.txt  add.cpp  opgave2.py
week2/: count_f_differential_solvers.py  differential_solvers.py  euler.py  gilpin.py  lotka_volterra.py  oscilator.py  oscillator.py  seir.py  seir_bonus.py
week3/: kernel.cl  main.py
week3/boltzmann/: BoltzmannGrid2D9Q.cpp  BoltzmannGrid2D9Q.h  BoltzmannGridD2Q9.cpp  BoltzmannGridD2Q9.h  CMakeLists.txt  Defines.h  ErrorHandling.h  FPSCounter.cpp  FPSCounter.h  FragmentShader.glsl  ImageShape.cpp  ImageShape.h  Includes.h  ReadMe.txt  Sequential.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.glsl  Window.cpp  Window.h  boltzmann.cpp  boltzmann.sln  boltzmann.vcxproj  boltzmann.vcxproj.filters
